# chip-8-emu-rs

./: .gitignore  Cargo.toml  Cross.toml  README.md  index.html  shell.nix
.cargo/: config.toml
.github/: rust.yml
.github/workflows/: rust.yml
src/: args.rs  audio.rs  chip8.rs  errors.rs  fstools.rs  input.rs  lib.rs  main.rs  opcode_parser.rs  options.rs  utils.rs  wasm.rs
