[package]
name = "chip-8-emu"
version = "0.3.0"
edition = "2021"
authors = ["Amy Y"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pixels = "0.13"
winit = "0.27"
rand = "0.8"
clap = { version = "3.1.8", features = ["derive"] }

savefile = "0.10"
savefile-derive = "0.10"

cpal = "0.13"
cfg-if = "1.0.0"

wasm-bindgen = "0.2"
tsify-next = "0.5"
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "GpuTextureFormat"
]}
js-sys = "0.3"
gloo-console = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
